--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,10 @@ a {
     border-color: #e4e4e4!important;
 }
 
+.btn-light i {
+    color: #9faab7;
+}
+
 //  header section
 
 .section-header {
@@ -752,6 +756,123 @@ a {
     .breadcrumb-item.active {
         color: #545454;
     }
+}
+
+.item-shopping-cart {
+    margin-bottom: 20px;
+}
+
+.item-shopping-cart .itemside {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.itemside {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+}
+
+figure {
+    margin-bottom: 0;
+}
+
+.itemside .aside {
+    position: relative;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+}
+
+.img-sm {
+    width: 80px;
+    height: 80px;
+}
+
+.img-lg, .img-md, .img-sm, .img-xs {
+    -o-object-fit: cover;
+    object-fit: cover;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    -webkit-box-flex: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
+}
+
+.itemside .info {
+    padding-left: 15px;
+    padding-right: 7px;
+}
+
+.itemside .title {
+    display: block;
+    margin-bottom: 5px;
+    color: #212529;
+}
+
+.input-spinner {
+    width: 125px;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    vertical-align: middle;
+}
+
+.input-group-prepend {
+    margin-right: -1px;
+}
+
+.input-group-prepend, .input-group-append {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.input-spinner .btn {
+    width: 42px;
+    text-align: center;
+    padding-left: .5rem;
+    padding-right: .5rem;
+}
+
+.input-group-prepend .btn, .input-group-append .btn {
+    position: relative;
+    z-index: 2;
+}
+
+.input-spinner input.form-control {
+    text-align: center;
+    max-width: 46px;
+    font-weight: 700;
+    -ms-flex-preferred-size: 46px;
+    flex-basis: 46px;
+    border-color: #e4e4e4;
+    -webkit-box-flex: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
+}
+
+.btn.disabled {
+    cursor: not-allowed;
+}
+
+.item-shopping-cart .price {
+    margin-bottom: 0;
+}
+
+.price {
+    font-weight: 600;
+    color: #212529;
+}
+
+.btn-light.disabled, .btn-light:disabled {
+    color: #212529!important;
+    background-color: #f0f2f4!important;
+    border-color: #f0f2f4!important;
 }
 
 // Product View page
